// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component :: Board :: Board displays the cards and add "add another card button" when it is not creating any card 1`] = `
<main
  className="myBoard"
>
  <div
    className="card"
  >
    <h3
      className="card-title"
    >
      My title
    </h3>
  </div>
  <button
    className="board add-card"
  >
    Add another card
  </button>
</main>
`;

exports[`Component :: Board :: Board loads when a card is creating 1`] = `
<main
  className="myBoard"
>
  <div
    className="board loader"
  >
    We are adding a new card...
  </div>
</main>
`;
